--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
             <ul class="nav">
               <li><%= link_to "About", "/about_apps#index"  %></li>
               <li><%= link_to "Comments", "/comments#index"  %></li>
-              <li><%= link_to "Log In", "/user#sign_in"  %></li>
+              <!-- <li><%= link_to "Log In", "/user#sign_in"  %></li> -->
             </ul>
           </div><!--/.nav-collapse -->
         </div>
