--- a/app/views/app_ideas/index.html.erb
+++ b/app/views/app_ideas/index.html.erb
@@ -13,7 +13,7 @@
 
 <p>Our second App will be for comments so wait for that.</p>
 
-<p>We were inspired by <a href="http://jenniferdewalt.com"> Jennifer Dewalt </a> but far too lazy to do this fro 180 days. We can’t even do it for 20 days each, so we are going to do one app each every other day resulting in 20 total but 10 each. </p>
+<p>We were inspired by <a href="http://jenniferdewalt.com"> Jennifer Dewalt </a> but far too lazy to do this for 180 days. We can’t even do it for 20 days each, so we are going to do one app each every other day resulting in 20 total but 10 each. </p>
 
 <p>Monitor our log of apps in the <a href="about_apps#idex"> About </a> section</p>
 <br>
