Updated formatting on homepage

--- a/app/views/app_ideas/index.html.erb
+++ b/app/views/app_ideas/index.html.erb
@@ -1,9 +1,7 @@
 <h1>20 in 20</h1>
 <br>
 <br>
-<h2>Hi, we are Alexis and Jenni</h2>
-<h2>and we are making</h2>
-<h2>20 Apps in 20 days</h2>
+<h3>Hi, we are Alexis and Jenni and we are making 20 Apps in 20 days</h3>
 <br>
 <br>
 <p>Alexis and Jenni took Back End Web Development through General Assembly and this is our final project.</p>
