--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,9 +47,9 @@
           <a class="brand" href="app_ideas#index">TwentyHome</a>
           <div class="container nav-collapse">
             <ul class="nav">
-              <li><%= link_to "About", "/about_apps#index"  %></li>
-              <li><%= link_to "Comments", "/comments#index"  %></li>
-              <!-- <li><%= link_to "Log In", "/user#sign_in"  %></li> -->
+              <li><%= link_to "About", about_apps_path  %></li>
+              <li><%= link_to "Comments", comments_path  %></li>
+              <!-- <li><%= link_to "Log In", new_user_session_path %></li> -->
             </ul>
           </div><!--/.nav-collapse -->
         </div>
