--- a/app/views/about_apps/index.html.erb
+++ b/app/views/about_apps/index.html.erb
@@ -1,8 +1,18 @@
 <h1>About 20 in 20</h1>
 <br>
+<p>We took Back End Web Development through <a href="https://generalassemb.ly/"> General Assembly </a> and this is our final project.</p>
 <br>
-<p>We will keep an updated log of each project here since not all apps will be interactive for all users.  Some of our ideas are for us only or to harass our BEWDiful teachers.</p>
+<p>Rather than trying to perfect one big project we chose to work on multiple small projects. <br> By doing multiple apps we've been able to learn from our mistakes and make the each new app <br> better than the last. Each project is based on one concept we were taught in class rather <br> than trying to pick on big project that uses many of the concepts. <br> We started the class May 28 2013and the final presentation for the class is August 26th.</p>
 <br>
+<p>We were inspired by <a href="http://jenniferdewalt.com"> Jennifer Dewalt </a>. </p>
+<br>
+<p>Monitor our log of apps on the <%= link_to "Home", root_path %> Page</p>
+<br>
+<p>I'll also be keeping tabs on what I'm making on the blog, which is a coming soon. </p>
+<br>
+<p>There are various ideas we have and I'd love your suggections! If there is something you think <br> could challenge us or something we could improve, leave us a <%= link_to "comment", comments_path %> </p>
+<br>
+<p>Thanks for stopping by and learning more about this project, feel free to send me an e-mail <%= mail_to "twentyin20days@gmail.com" %>!</p>
 <br>
 <br>
 <br>
