--- a/app/views/app_ideas/index.html.erb
+++ b/app/views/app_ideas/index.html.erb
@@ -1,19 +1,30 @@
 <h1>20 in 20</h1>
 <br>
 <br>
-<h3>Hi, we are Alexis and Jenni and we are making 20 Apps in 20 days</h3>
+<h3>Hi, we are Alexis and Jenni <br> We are making 20 Apps in 20 days</h3>
 <br>
-<br>
-<p>Alexis and Jenni took Back End Web Development through General Assembly and this is our final project.</p>
-<p>Rather than trying to perfect one big project we chose to work on many small projects with the hope that we could learn and practice each concept we were taught in class rather than trying to pick on big project that uses all of the concepts.</p>
 
-<p>We started working on the projects at the end of July and we plan to add a new App everyday for 20 day from August 15th through September 4th.</p>
+<p> App 4 </p>
+<!-- <p> App 5 </p> 
+<p> App 6 </p>
+<p> App 7 </p>
+<p> App 8 </p>
+<p> App 9 </p>
+<p> App 10 </p>
+<p> App 11 </p>
+<p> App 12 </p>
+<p> App 13 </p>
+<p> App 14 </p>
+<p> App 15 </p>
+<p> App 16 </p>
+<p> App 17 </p>
+<p> App 18 </p>
+<p> App 19 </p>
+<p> App 20 </p> -->
+<p> App 3 <%= link_to "Comments", comments_path %></p>
+<p> App 2 <%= link_to "About", about_apps_path %> </p>
+<p> App 1 <%= link_to "Home (here)", root_path %> </p>
 
-<p>Our second App will be for comments so wait for that.</p>
-
-<p>We were inspired by <a href="http://jenniferdewalt.com"> Jennifer Dewalt </a> but far too lazy to do this for 180 days. We can’t even do it for 20 days each, so we are going to do one app each every other day resulting in 20 total but 10 each. </p>
-
-<p>Monitor our log of apps in the <%= link_to "About", about_apps_path %> Section</p>
 <br>
 <br>
 <br>
