--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,8 +47,8 @@
           <a class="brand" href="app_ideas#index">TwentyHome</a>
           <div class="container nav-collapse">
             <ul class="nav">
-              <li><%= link_to "About", about_apps_path  %></li>
-              <li><%= link_to "Comments", comments_path  %></li>
+              <!-- <li><%= link_to "About", about_apps_path  %></li> -->
+              <!-- <li><%= link_to "Comments", comments_path  %></li> -->
               <!-- <li><%= link_to "Log In", new_user_session_path %></li> -->
             </ul>
           </div><!--/.nav-collapse -->
@@ -65,6 +65,8 @@
          
 
       <footer>
+        <p>Return to the <%= link_to "Home", root_path %> Page</p>
+
         <p>&copy; A. Miller & J. Tyliszczak 2013</p>
       </footer>
 
